# onebot-api

./: .gitignore  Cargo.toml  LICENSE  README.md  deno.json
.github/workflows/: publish-crate.yml  publish-release.yml  publish.yml
crates/macros/: Cargo.toml
scripts/: publish-release.ts
src/: api.rs  communication.rs  error.rs  event.rs  lib.rs  main.rs  message.rs  quick_operation.rs  selector.rs
src/api/: arg_type.rs  return_type.rs
src/communication/: combiner.rs  http.rs  http_post.rs  sse.rs  utils.rs  ws.rs  ws_reverse.rs  ws_utils.rs
src/communication/ws/: ws_transfer.rs
src/event/: message.rs  meta.rs  notice.rs  request.rs
src/message/: receive_segment.rs  segment.rs  segment_builder.rs  send_segment.rs  signal_segment_builder.rs  utils.rs
