[package]
name = "onebot-api"
version = "0.1.0"
edition = "2024"
authors = ["Alex Chen <m.ac.alexchen@outlook.com>"]
description = "Onebot API"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = "0.12.28"
axum = { version = "0.8.8", optional = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"], optional = true }
url = "2.5.7"
http = "1.4.0"
flume = "0.12.0"
uuid = { version = "1.19.0", features = ["v4"] }

#onebot-api-macro = { path = "crates/macros" }
onebot-api-macro = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

[features]
websocket = ["tokio-tungstenite"]
websocket-reverse = ["axum"]
http = []
http-post = ["axum"]

default = ["websocket", "websocket-reverse", "http", "http-post"]

[workspace]
members = ["crates/*"]

