[package]
name = "onebot-api"
version = "1.0.3"
edition = "2024"
authors = ["Ecamika <ecamika@outlook.com>"]
description = "Onebot API"
repository = "https://github.com/Ecamika/onebot-api.git"
homepage = "https://github.com/Ecamika/onebot-api"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
#async-stream = "0.3.6"
async-trait = "0.1.89"
futures = "0.3.31"
reqwest = { version = "0.13.1", features = ["rustls", "json", "stream"] }
axum = { version = "0.8.8", features = ["ws"], optional = true }
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"], optional = true }
url = "2.5.7"
http = "1.4.0"
flume = "0.12.0"
uuid = { version = "1.19.0", features = ["v4"] }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
strum_macros = "0.27.2"
eventsource-stream = { version = "0.2.3", optional = true }
bytes = "1.11.1"
hmac = { version = "0.12.1", optional = true }
sha1 = { version = "0.10.6", optional = true }
hex = { version = "0.4.3", optional = true }

[features]
websocket = ["tokio-tungstenite"]
websocket-reverse = ["axum"]
http = []
http-post = ["axum", "hmac", "sha1", "hex"]
sse = ["eventsource-stream"]
combiner = []

full = ["websocket", "websocket-reverse", "http", "http-post", "sse", "combiner"]

default = ["full"]

