[package]
name = "onebot-api-macro"
version = "0.1.0"
edition = "2024"
authors = ["Alex Chen <m.ac.alexchen@outlook.com>"]
description = "Onebot API Macros"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.111", features = ["full"] }
quote = "1.0.42"
proc-macro2 = "1.0.103"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

